Fix label spacing in panels

--- a/app/assets/stylesheets/resumis/_panels.scss
+++ b/app/assets/stylesheets/resumis/_panels.scss
@@ -73,6 +73,10 @@
                 vertical-align: baseline;
             }
         }
+
+        .label:not(:first-child) {
+            margin-left: 10px;
+        }
     }
 
     & > .list-group {
